--- a/proyectoEmpresa/proyectoEmpresa.csproj
+++ b/proyectoEmpresa/proyectoEmpresa.csproj
@@ -97,12 +97,6 @@
     <Compile Include="Controller\BillController.cs" />
     <Compile Include="Controller\ProductsController.cs" />
     <Compile Include="Controller\UsersController.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormChangeProducts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +115,18 @@
     <Compile Include="Model\UsersModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\FormLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormLogin.Designer.cs">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormRegister.Designer.cs">
+      <DependentUpon>FormRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FormStock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,9 +139,6 @@
     <Compile Include="View\FormShop.Designer.cs">
       <DependentUpon>FormShop.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormChangeProducts.resx">
       <DependentUpon>FormChangeProducts.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +154,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FormShop.resx">
       <DependentUpon>FormShop.cs</DependentUpon>
     </EmbeddedResource>
